k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: v1
kind: Deployment
metadata:
  name: eureka-service
  namespace: ${NAMESPACE}
spec:
  replicas: ${REPLICA_NUM}
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: eureka-service
        image: amitkshirsagar13/excel-eureka-service
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: eureka-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: eureka-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30761
  type: NodePort
---
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: eureka-service
  namespace: ${NAMESPACE}
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: eureka-service.${NAMESPACE}.${VNODE}.${VDOMAIN}
      http:
        paths:
          - backend:
              serviceName: eureka-service
              servicePort: 80
            path: /
